--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-image: url("./assets/bg1.png");
+  background-size: 100% 100%;
+  min-height: 100vh;
+  max-width: 100vw;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: inherit;
+
+}
+
+.game-button:hover {
+  transform: scale(1.1);
+}
+
+.game-button:active {
+  transform: scale(0.9);
+}
+
+.container {
+  display: flex
+}
+
+.title {
+  font-size: 48px;
+  margin-bottom: 30px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* 
+.subtitle {
+  font-size: 24px;
+  margin-bottom: 40px;
+  text-shadow: 2px 2px #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.start-button {
+  padding: 10px 20px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  background-color: #4CAF50;
+  color: #fff;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.start-button:hover {
+  background-color: #45a049;
+}  */
